...
                day,
                { day = it },
                label = "день",
                cyrillic = cyrillic,
            )
            KvadrantLoopingSelector(
                listOf("янв", "фев", "мар", "апр", "май", "июн", "июл", "авг", "сен", "окт", "ноя", "дек"),
                month,
                { month = it },
                label = "месяц",
                cyrillic = cyrillic,
            )
            KvadrantLoopingSelector(
...
